# shared-controllers

./: .gitignore  README.md  setup.cfg
lib/wholebodycontrollib/: loggerplotterlib.py  profilerlib.py  robotInterface.py  statemachine.py  visualizer.py  wholebodycontrol.py  wholebodylib.py
scripts/momentum-based-controller/: .gitignore  analyze_data.py  analyze_data_with_human.py  analyze_human_data.py  launch_box_motion_controller.py  launch_lifting_controller.py  launch_lifting_controller_with_human.py  test_state_machine.py  visualize_model.py
scripts/momentum-based-controller/utils/: configuration_handler.py
scripts/robots/ergoCubGazeboV1/: configuration.py
scripts/robots/ergoCubSN000/: configuration.py
scripts/robots/human/: configuration.py
scripts/robots/iCubGazeboV3/: configuration.py
scripts/robots/small_box/: configuration.py
