[metadata]
name = wholebodycontrollib
description = Python Library for whole-body-control of humanoid robots.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Rapetti
author_email = lor.rapetti@gmail.com
platforms = any
version= 0.0.1

[options]
zip_safe = False
packages = find:
package_dir =
    =lib
python_requires = >=3.8, <3.11

[options.packages.find]
where = lib
